minor spacing corrections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+* body div{
+	background-color: black
+	color: white;
+}
 #answer {
 	font-weight: bold;
 	font-size: 30px;
+	text-align: center;
 }
 
 #logo {
